Actions
Bug #14549
closedabort Date#step
Bug #14549:
abort Date#step
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.6.0dev (2018-02-24 trunk 62563) [x86_64-darwin16]
Backport:
Actions
Added by ksss (Yuki Kurihara) over 8 years ago. Updated over 8 years ago.
Applied in changeset trunk|r62572.
date_core.c: defensive code
ext/date/date_core.c (f_cmp): check comparison failure.
ext/date/date_core.c (d_lite_step): deal with the comparison
result more defensively. [ruby-core:85796] [Bug #14549]
ruby_2_5 r62610 merged revision(s) 62572.
ruby_2_4 r62883 merged revision(s) 62572.
ruby_2_3 r62947 merged revision(s) 62572.